imputaciones; all items filtered now; fixed error with uploading maps

--- a/views/admin/partials/users.jade
+++ b/views/admin/partials/users.jade
@@ -16,7 +16,7 @@ div.data_container
                       td 
                         div(input-inline-edit="user.username" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 1 }}")
                       td 
-                        div(input-inline-number="user.cedula" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 2 }}")
+                        div(input-inline-edit="user.cedula" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 2 }}")
                       td 
                         div(input-inline-password="user.password" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 3 }}")
                       td 
