--- a/views/partials/myview.jade
+++ b/views/partials/myview.jade
@@ -38,3 +38,5 @@ div.myview_wrapper
         div.tab_content(ng-include="'/partials/myview_menores'")
       tab.info_tab(heading="Estadisticas" select="stats()") 
         div.tab_content(ng-include="'/partials/myview_stats'")
+      tab.info_tab(heading="Imputaciones" select="imputaciones()") 
+        div.tab_content(ng-include="'/partials/myview_imputaciones'")
