--- a/views/partials/postulado.jade
+++ b/views/partials/postulado.jade
@@ -39,4 +39,6 @@ div(ng-controller="PostuladoCtrl")
         div.tab_content(ng-include="'/partials/bienes'") 
       tab.info_tab(heading="Menores" select="menores()") 
         div.tab_content(ng-include="'/partials/menores'")
+      tab.info_tab(heading="Imputaciones" select="imputaciones()") 
+        div.tab_content(ng-include="'/partials/imputaciones'")
 
