--- a/views/partials/bienes.jade
+++ b/views/partials/bienes.jade
@@ -7,7 +7,8 @@ div.info
          div.hecho_lista(ng-show="root.bienes.length") 
             div.hecho_lista_title
                Hay {{root.bienes.length}} bienes para este postulado.
-            div.hecho_titulo(ng-class="{selected: $index==root.selectedBienIndex, dirty: bien.dirty}" ng-click="get_bien($index)" ng-repeat="bien in root.bienes") {{bien.titulo}}
+            input.item_filter(type="text" placeholder="Buscar bien" name="bien_search" ng-model="root.bienes.search")
+            div.hecho_titulo(ng-class="{selected: bien==root.bien, dirty: bien.dirty}" ng-click="get_bien(bien)" ng-repeat="bien in root.bienes | filter:root.bienes.search") {{bien.titulo}}
               div.delete_item(ng-click="delete_bien(bien)")
 
 
