--- a/views/index.jade
+++ b/views/index.jade
@@ -26,5 +26,5 @@ html
           input(type="text", id="cedula", name="cedula") 
           label.form_label Contraseña: 
           input(type="password", id="password", name="password")
-          input(type="Submit", class="submit", value="Login")
+          input(type="Submit", class="submit", value="Ingresar")
     //img.home_banner(src="/img/home_background.png")
