--- a/views/partials/bienes.jade
+++ b/views/partials/bienes.jade
@@ -51,3 +51,8 @@ div.info
          div(ng-show="not_empty(root.bien.mensaje)") 
            div(input-inline-text="root.bien.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
 
+
+         h2.info_subtitle Observaciones del investigador 
+         p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
+         div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+
