--- a/views/admin/partials/postulados.jade
+++ b/views/admin/partials/postulados.jade
@@ -6,18 +6,18 @@ div.data_container
             table#users_table.object_table
                 thead
                     tr.row
-                      th Nombres 
                       th Apellidos 
+                      th Nombres 
                       th Cedula 
                       th Fecha de nacimiento 
                       th Ciudad 
                       th Informaciones 
                 tbody
-                    tr.row(ng-class="{editing: is_dirty(p)}" ng-repeat="p in postulados" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
-                      td 
-                        div(input-inline-edit="p.nombres" on-save="set_p_dirty(p)" ng-focus="edit()" tabindex="{{ $index*10 + 1 }}")
+                    tr.row(ng-class="{editing: is_dirty(p)}" ng-repeat="p in postulados | orderBy: 'apellidos'" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
                       td 
                         div(input-inline-edit="p.apellidos" on-save="set_p_dirty(p)" ng-focus="edit()"  tabindex="{{ $index*10 + 1 }}")
+                      td 
+                        div(input-inline-edit="p.nombres" on-save="set_p_dirty(p)" ng-focus="edit()" tabindex="{{ $index*10 + 1 }}")
                       td
                         div(input-inline-edit="p.cedula" on-save="set_p_dirty(p)" ng-focus="edit()"  tabindex="{{ $index*10 + 1 }}")
                       td
@@ -26,7 +26,7 @@ div.data_container
                         div(input-inline-edit="p.ciudad" on-save="set_p_dirty(p)" ng-focus="edit()"  tabindex="{{ $index*10 + 1 }}")
                       td 
                         button.action(ng-show="is_dirty(p)" ng-click="save_postulado(p)") 
-                          img(src="/img/save.png") Salvar 
+                          img(src="/img/save.png") Guardar 
                         button.action(ng-hide="is_dirty(p)" ng-click="delete_postulado(p)") 
                           img(src="/img/delete.png") Eliminar
                         button.action(ng-click="view_postulado(p.cedula)" ) 
