--- a/views/inicio.jade
+++ b/views/inicio.jade
@@ -28,7 +28,7 @@ html(ng-app="jusypazNormalApp" manifest="/cache.manifest" type="text/cache-manif
                 ul.header_submenu(ng-show="show_submenu")
                   li.header_submenu_item(ng-click="config()") Configuraciones 
                   li.header_submenu_item(ng-click="message()") Deja un mensaje
-                  li.header_submenu_item(ng-click="logout()") Logout 
+                  li.header_submenu_item(ng-click="logout()") Salir 
 
     div.root(ng-controller="RootCtrl")
       div.messages
