--- a/views/partials/jyp_parapolitica.jade
+++ b/views/partials/jyp_parapolitica.jade
@@ -74,3 +74,8 @@ div.info_wrapper
       div(ng-show="root.parapolitica.mensaje")
         div(input-inline-text="root.parapolitica.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
 
+
+      h2.info_subtitle Observaciones del investigador 
+      p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
+      div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+
