--- a/views/partials/jyp_relaut.jade
+++ b/views/partials/jyp_relaut.jade
@@ -83,3 +83,8 @@ div.info_wrapper
       p(ng-hide="not_empty(root.relaut.mensaje)") No hay observaciones del postulado
       div(ng-show="root.relaut.mensaje")
         div(input-inline-text="root.relaut.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
+
+      h2.info_subtitle Observaciones del investigador 
+      p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
+      div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+
