--- a/views/partials/menores.jade
+++ b/views/partials/menores.jade
@@ -82,3 +82,8 @@ div.info
          p(ng-hide="not_empty(root.menor.mensaje)") No hay observaciones del postulado
          div(ng-show="not_empty(root.menor.mensaje)") 
             div(input-inline-text="root.menor.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
+
+         h2.info_subtitle Observaciones del investigador 
+         p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
+         div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+
