--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -46,7 +46,7 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
                   li.header_submenu_item(ng-click="admin_users()") Administración Usuarios 
                   li.header_submenu_item(ng-click="informes()") Informes
                   li.header_submenu_item(ng-click="config()") Configuraciones 
-                  li.header_submenu_item(ng-click="logout()") Logout 
+                  li.header_submenu_item(ng-click="logout()") Salir 
 
     
     div.root(ng-controller="RootCtrl")
