--- a/views/partials/menores.jade
+++ b/views/partials/menores.jade
@@ -29,7 +29,7 @@ div.info
          table.tab_form_table
             tr
                td
-                  label.small_form Status
+                  label.small_form Estado 
                   div(input-inline-select-menor-status="root.menor.status" opciones="root.opciones_status"  on-save="set_menor_dirty()" ng-focus="edit()" tabindex="21")
                td
                   label.small_form Nombres
