--- a/views/partials/myview_imputaciones.jade
+++ b/views/partials/myview_imputaciones.jade
@@ -1,4 +1,6 @@
 div.info
    h2.info_subtitle Imputaciones 
-   a(ng-show="root.hoja.imputaciones", href="{{root.hoja.imputaciones}}") Bajar archivo imputaciones
-   p(ng-hide="root.hoja.imputaciones") No hay archivo de imputaciones.
+   div(ng-show="root.hoja.imputaciones.length > 0")
+      div.remisiones(ng-repeat="r in root.hoja.imputaciones")
+        a.inline(href="{{r}}") {{ get_file_name_only(r) }} 
+   p(ng-hide="root.hoja.imputaciones.length > 0") No hay archivo de imputaciones.
