--- a/views/partials/postulado.jade
+++ b/views/partials/postulado.jade
@@ -11,7 +11,7 @@ div(ng-controller="PostuladoCtrl")
         
       if (is_admin)
         div.top_actions.right
-          button.buttons.action_button(ng-click="save()") Guardar 
+          button.buttons.action_button(style="background-color:red" ng-click="save()") Guardar 
           //-button.buttons.action_button(ng-click="cancel()") Cancelar
 
       div.info_general
