--- a/public/css/main.css
+++ b/public/css/main.css
@@ -167,6 +167,7 @@ input.dialog_input {
   padding: 4px 6px;
   border-radius: 5px;
   border: 1px solid #003b6f;
+  line-height: 16px;
 }
 
 /*  App */
@@ -335,6 +336,7 @@ input.quick_input {
   font-size: 12px;
 }
 h2.info_subtitle {
+  text-transform:uppercase;
   font-size: 24px !important;
 }
 .info_area {
@@ -536,7 +538,7 @@ input[type=file] {
 .buttons {
   cursor: pointer;
   height: 45px;
-  width: 95px;
+  width: 100px;
   border: none;
   margin-right: 20px;
 }
@@ -846,6 +848,7 @@ td.actions {
 }
 
 .page_title {
+  text-transform:uppercase;
   color: #003b6f;
 }
 
@@ -989,6 +992,15 @@ th.hpad {
   margin-top: 5px;
 }
 
+.inline_delete_item {
+  background-image: url('/img/delete_small.png');
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  margin-left: 5px;
+  vertical-align: middle;
+}
+
 .connection_ok {
   background-image: url('/img/green.png');
   width: 32px;
@@ -1031,4 +1043,8 @@ th.hpad {
 
 .x.axis path {
   display: none;
+}
+
+.smooth_separator {
+  border: 1px dashed grey; 
 }
