--- a/views/partials/hv.jade
+++ b/views/partials/hv.jade
@@ -81,8 +81,11 @@ div.info
             div(input-inline-text="root.hoja.bienes_desc" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="75")
    
    h2.info_subtitle Remisiones 
-   a(ng-show="root.hoja.remisiones", href="{{root.hoja.remisiones}}") Bajar archivo remisiones
-   p(ng-hide="root.hoja.remisiones") No hay archivo de remisiones.
+   div(ng-show="root.hoja.remisiones.length > 0")
+      div.remisiones(ng-repeat="r in root.hoja.remisiones")
+        a.inline(href="{{r}}") {{ get_file_name_only(r) }} 
+        div.inline_delete_item(ng-click="delete_remision(r)")
+   p(ng-hide="root.hoja.remisiones.length > 0") No hay archivo de remisiones.
    file-upload.uploadContainer.inline(path="'hv'" file_id="'remis'" path_id="'remis'" complete_function="set_remision(url)" post_id="root.postulado_id")
          div(ng-show="progressVisible")
             div.percent {{uploadProgress}}%
