--- a/views/partials/myview_menores.jade
+++ b/views/partials/myview_menores.jade
@@ -26,7 +26,7 @@ div.info
            table.tab_form_table
             tr
                td.align_right
-                  label.small_form Status
+                  label.small_form Estado 
                td
                   div.myview_form_value {{root.menor.status}}
             tr
