--- a/views/partials/proc.jade
+++ b/views/partials/proc.jade
@@ -39,6 +39,9 @@ div.info
                td
                   label.small_form Estado 
                   div(input-inline-text="root.proc.estado" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="23")
+               td
+                  label.small_form Tipo imputación
+                  div(input-inline-text="root.proc.imputacion" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="25")
 
          h2.info_subtitle Observaciones del postulado 
          p(ng-hide="not_empty(root.proc.mensaje)") No hay observaciones del postulado
