--- a/views/partials/input-inline-select-codigo.jade
+++ b/views/partials/input-inline-select-codigo.jade
@@ -1,6 +1,7 @@
 div(class="input_inline_edit_div")
+   {{root.codigos.length}}
    if is_admin
-     select(class="inline_edit_select" ng-options="c.nombre as c.nombre for c in opciones" ng-model="model" on-tab="tab()" on-enter="save()" on-blur="blur()" on-esc="cancel()" ng-show="editMode" tabindex="{{tabindex}}" ng-focus="edit()")
+     select#codigos_multi(multiple ng-multiple="true" data-ng-attr-size="{{opciones.length}}" class="inline_edit_select" ng-options="c.nombre as c.nombre for c in opciones" ng-model="model" on-tab="tab()" on-enter="save()" on-blur="blur()" on-esc="cancel()" ng-show="editMode" tabindex="{{tabindex}}" ng-focus="edit()")
      span(ng-mouseenter="showEdit = true" ng-mouseleave="showEdit = false")
        span(ng-hide="editMode" ng-click="edit()" ) 
          div(class="inline_edit_text")
