fixed observaciones were all the same

--- a/views/partials/jyp_fosas.jade
+++ b/views/partials/jyp_fosas.jade
@@ -95,8 +95,8 @@ div.info_wrapper
         div(input-inline-text="root.fosa.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
 
       h2.info_subtitle Observaciones del investigador 
-      p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
-      div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+      p(ng-hide="not_empty(root.fosa.observacion)") No hay observaciones del investigador 
+      div(input-inline-text="root.fosa.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
 
 
    div.file_browser(ng-show="showFiles")
