--- a/views/partials/bienes.jade
+++ b/views/partials/bienes.jade
@@ -53,6 +53,6 @@ div.info
 
 
          h2.info_subtitle Observaciones del investigador 
-         p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
-         div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+         p(ng-hide="not_empty(root.bien.observacion)") No hay observaciones del investigador 
+         div(input-inline-text="root.bien.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
 
