--- a/views/partials/jyp_parapolitica.jade
+++ b/views/partials/jyp_parapolitica.jade
@@ -76,6 +76,6 @@ div.info_wrapper
 
 
       h2.info_subtitle Observaciones del investigador 
-      p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
-      div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+      p(ng-hide="not_empty(root.parapolitica.observacion)") No hay observaciones del investigador 
+      div(input-inline-text="root.parapolitica.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
 
