--- a/views/partials/menores.jade
+++ b/views/partials/menores.jade
@@ -84,6 +84,6 @@ div.info
             div(input-inline-text="root.menor.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
 
          h2.info_subtitle Observaciones del investigador 
-         p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
-         div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+         p(ng-hide="not_empty(root.menor.observacion)") No hay observaciones del investigador 
+         div(input-inline-text="root.menor.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
 
