--- a/views/partials/proc.jade
+++ b/views/partials/proc.jade
@@ -49,6 +49,6 @@ div.info
           div(input-inline-text="root.proc.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
 
          h2.info_subtitle Observaciones del investigador 
-         p(ng-hide="not_empty(root.delito.observacion)") No hay observaciones del investigador 
-         div(input-inline-text="root.delito.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
+         p(ng-hide="not_empty(root.proc.observacion)") No hay observaciones del investigador 
+         div(input-inline-text="root.proc.observacion" on-save="set_dirty()" ng-focus="edit()" tabindex="220") 
 
