--- a/views/partials/myview_fosas.jade
+++ b/views/partials/myview_fosas.jade
@@ -105,6 +105,12 @@ div.info_wrapper
                label.small_form Entregada a los familiares
             td
                div.myview_form_value {{root.fosa.entregada_familia | spanishBool }}
+
+      div.observaciones(ng-show="root.fosa.observacion != null && root.fosa.observacion != '' && root.fosa.observacion != 'No especificado'")
+        h2.info_subtitle Observaciones del investigador
+        hr.title_separator
+        {{ root.fosa.observacion }}
+
             
    //-div.file_browser(ng-show="showFiles")
    //-   span.close_button.right
